fixing vertical alignment

--- a/_sass/includes/_design-guide.sass
+++ b/_sass/includes/_design-guide.sass
@@ -273,17 +273,25 @@
 
 			.icon-panel
 				ul
-					columns: 5
-					-webkit-columns: 5
-					-moz-columns: 5
-					list-style-type: none
+					&.five
+						columns: 5
+						-webkit-columns: 5
+						-moz-columns: 5
+						list-style-type: none
+					&.six
+						columns: 6
+						-webkit-columns: 6
+						-moz-columns: 6
+						list-style-type: none
 					li 
+						display: block
 						border-radius: 2px 
 						background: $midnight-2
 						text-align: center
 						padding: 10px
 						margin-bottom: 10px
 						font-size: 12px
+						height: 65px
 			.letter-list
 				margin: 8px 0
 				&.lower
