--- a/_sass/includes/_utilities.sass
+++ b/_sass/includes/_utilities.sass
@@ -130,3 +130,9 @@ a
 ul
 	margin: 0
 	padding: 0
+
+.v-align
+	top: 50%
+	-webkit-transform: translateY(-50%)
+	transform: translateY(-50%)
+	position: relative
